// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the FeedItemCard component should accept a different card color 1`] = `
<View
  style={
    Object {
      "marginHorizontal": 10,
      "marginVertical": 5,
    }
  }
>
  <View
    cardColor="salmon"
    image="https://picsum.photos/600/400/?random"
    isLight={false}
    style={
      Object {
        "backgroundColor": "salmon",
        "borderRadius": 6,
        "minHeight": 400,
        "shadowColor": "#dddddd",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "flex": 1,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Image
          source={Array []}
          style={
            Object {
              "aspectRatio": 1,
              "flex": 1,
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        />
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        color="#ffffff"
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "flex": 0,
            "fontFamily": null,
            "fontSize": 25.2,
            "fontWeight": "700",
            "lineHeight": 31.28,
            "paddingHorizontal": 20,
            "paddingTop": 20,
          }
        }
      >
        Boom
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "paddingBottom": 20,
              "paddingHorizontal": 20,
              "paddingTop": 10,
            }
          }
        >
          <Svg
            height={21.6}
            viewBox="0 0 24 24"
            width={21.6}
          >
            <Path
              d="M4.6 3.64v16.356c0 .004 0 .004-.003.004h14.806c-.004 0-.003 0-.003-.004V3.64c0-.004 0-.004.003-.004H4.597c.004 0 .003 0 .003.004zm-1.6 0C3 2.734 3.717 2 4.597 2h14.806C20.285 2 21 2.734 21 3.64v16.356c0 .906-.717 1.64-1.597 1.64H4.597c-.882 0-1.597-.734-1.597-1.64V3.64zm4 3.27c0 .45.366.817.818.817h8.364c.452 0 .818-.366.818-.818 0-.454-.366-.82-.818-.82H7.818c-.452 0-.818.366-.818.82zm0 4.908c0 .452.366.818.818.818h8.364c.452 0 .818-.366.818-.818 0-.452-.366-.818-.818-.818H7.818c-.452 0-.818.366-.818.818zm0 4.91c0 .45.366.817.818.817h4.764c.452 0 .818-.366.818-.818 0-.452-.366-.818-.818-.818H7.818c-.452 0-.818.364-.818.816z"
              fill="#ffffff"
            />
          </Svg>
          <Text
            accessible={true}
            allowFontScaling={true}
            color="#ffffff"
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": null,
                "fontSize": 14,
                "lineHeight": 15.87,
                "paddingHorizontal": 10,
              }
            }
          >
            What
          </Text>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "paddingBottom": 20,
              "paddingHorizontal": 20,
              "paddingTop": 10,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Svg
            height={21.6}
            viewBox="0 0 24 24"
            width={21.6}
          >
            <Path
              d="M13.13 20.2h-2.26l1.4-1.4.03-.02.03-.03c6.37-5.6 8.06-7.67 8.06-10.27 0-2.2-1.7-3.9-3.9-3.9-1.23 0-2.48.6-3.28 1.54L12 7.57l-1.23-1.45C9.97 5.18 8.72 4.6 7.5 4.6c-2.2 0-3.9 1.67-3.9 3.88 0 2.6 1.7 4.66 8.07 10.27l.03.03.04.03 1.4 1.4zM10.8 4.03l-.03.03h.1c.4.3.8.64 1.13 1.03.33-.4.72-.75 1.14-1.05h.1c-.02 0-.03-.02-.04-.03.97-.66 2.13-1.03 3.3-1.03C19.6 3 22 5.4 22 8.47c0 3.8-3.4 6.88-8.6 11.46l-1.4 1.4-1.4-1.4C5.4 15.36 2 12.27 2 8.48 2 5.38 4.4 3 7.5 3c1.17 0 2.33.37 3.3 1.03z"
              fill="#ffffff"
            />
          </Svg>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`the FeedItemCard component should accept and render passed in styles 1`] = `
<View
  style={
    Object {
      "marginHorizontal": 10,
      "marginVertical": 5,
    }
  }
>
  <View
    cardColor={undefined}
    image="https://picsum.photos/600/400/?random"
    isLight={true}
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 6,
        "height": 400,
        "minHeight": 400,
        "shadowColor": "#dddddd",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
        "width": "92%",
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "flex": 1,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Image
          source={Array []}
          style={
            Object {
              "aspectRatio": 1,
              "flex": 1,
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        />
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        color="#505050"
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#505050",
            "flex": 0,
            "fontFamily": null,
            "fontSize": 25.2,
            "fontWeight": "700",
            "lineHeight": 31.28,
            "paddingHorizontal": 20,
            "paddingTop": 20,
          }
        }
      >
        Boom
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "paddingBottom": 20,
              "paddingHorizontal": 20,
              "paddingTop": 10,
            }
          }
        >
          <Svg
            height={21.6}
            viewBox="0 0 24 24"
            width={21.6}
          >
            <Path
              d="M4.6 3.64v16.356c0 .004 0 .004-.003.004h14.806c-.004 0-.003 0-.003-.004V3.64c0-.004 0-.004.003-.004H4.597c.004 0 .003 0 .003.004zm-1.6 0C3 2.734 3.717 2 4.597 2h14.806C20.285 2 21 2.734 21 3.64v16.356c0 .906-.717 1.64-1.597 1.64H4.597c-.882 0-1.597-.734-1.597-1.64V3.64zm4 3.27c0 .45.366.817.818.817h8.364c.452 0 .818-.366.818-.818 0-.454-.366-.82-.818-.82H7.818c-.452 0-.818.366-.818.82zm0 4.908c0 .452.366.818.818.818h8.364c.452 0 .818-.366.818-.818 0-.452-.366-.818-.818-.818H7.818c-.452 0-.818.366-.818.818zm0 4.91c0 .45.366.817.818.817h4.764c.452 0 .818-.366.818-.818 0-.452-.366-.818-.818-.818H7.818c-.452 0-.818.364-.818.816z"
              fill="#505050"
            />
          </Svg>
          <Text
            accessible={true}
            allowFontScaling={true}
            color="#505050"
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#505050",
                "fontFamily": null,
                "fontSize": 14,
                "lineHeight": 15.87,
                "paddingHorizontal": 10,
              }
            }
          >
            What
          </Text>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "paddingBottom": 20,
              "paddingHorizontal": 20,
              "paddingTop": 10,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Svg
            height={21.6}
            viewBox="0 0 24 24"
            width={21.6}
          >
            <Path
              d="M13.13 20.2h-2.26l1.4-1.4.03-.02.03-.03c6.37-5.6 8.06-7.67 8.06-10.27 0-2.2-1.7-3.9-3.9-3.9-1.23 0-2.48.6-3.28 1.54L12 7.57l-1.23-1.45C9.97 5.18 8.72 4.6 7.5 4.6c-2.2 0-3.9 1.67-3.9 3.88 0 2.6 1.7 4.66 8.07 10.27l.03.03.04.03 1.4 1.4zM10.8 4.03l-.03.03h.1c.4.3.8.64 1.13 1.03.33-.4.72-.75 1.14-1.05h.1c-.02 0-.03-.02-.04-.03.97-.66 2.13-1.03 3.3-1.03C19.6 3 22 5.4 22 8.47c0 3.8-3.4 6.88-8.6 11.46l-1.4 1.4-1.4-1.4C5.4 15.36 2 12.27 2 8.48 2 5.38 4.4 3 7.5 3c1.17 0 2.33.37 3.3 1.03z"
              fill="#505050"
            />
          </Svg>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`the FeedItemCard component should render 1`] = `
<View
  style={
    Object {
      "marginHorizontal": 10,
      "marginVertical": 5,
    }
  }
>
  <View
    cardColor={undefined}
    image="https://picsum.photos/600/400/?random"
    isLight={true}
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 6,
        "minHeight": 400,
        "shadowColor": "#dddddd",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "flex": 1,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Image
          source={Array []}
          style={
            Object {
              "aspectRatio": 1,
              "flex": 1,
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        />
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        color="#505050"
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#505050",
            "flex": 0,
            "fontFamily": null,
            "fontSize": 25.2,
            "fontWeight": "700",
            "lineHeight": 31.28,
            "paddingHorizontal": 20,
            "paddingTop": 20,
          }
        }
      >
        Boom
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "paddingBottom": 20,
              "paddingHorizontal": 20,
              "paddingTop": 10,
            }
          }
        >
          <Svg
            height={21.6}
            viewBox="0 0 24 24"
            width={21.6}
          >
            <Path
              d="M4.6 3.64v16.356c0 .004 0 .004-.003.004h14.806c-.004 0-.003 0-.003-.004V3.64c0-.004 0-.004.003-.004H4.597c.004 0 .003 0 .003.004zm-1.6 0C3 2.734 3.717 2 4.597 2h14.806C20.285 2 21 2.734 21 3.64v16.356c0 .906-.717 1.64-1.597 1.64H4.597c-.882 0-1.597-.734-1.597-1.64V3.64zm4 3.27c0 .45.366.817.818.817h8.364c.452 0 .818-.366.818-.818 0-.454-.366-.82-.818-.82H7.818c-.452 0-.818.366-.818.82zm0 4.908c0 .452.366.818.818.818h8.364c.452 0 .818-.366.818-.818 0-.452-.366-.818-.818-.818H7.818c-.452 0-.818.366-.818.818zm0 4.91c0 .45.366.817.818.817h4.764c.452 0 .818-.366.818-.818 0-.452-.366-.818-.818-.818H7.818c-.452 0-.818.364-.818.816z"
              fill="#505050"
            />
          </Svg>
          <Text
            accessible={true}
            allowFontScaling={true}
            color="#505050"
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#505050",
                "fontFamily": null,
                "fontSize": 14,
                "lineHeight": 15.87,
                "paddingHorizontal": 10,
              }
            }
          >
            What
          </Text>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "paddingBottom": 20,
              "paddingHorizontal": 20,
              "paddingTop": 10,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Svg
            height={21.6}
            viewBox="0 0 24 24"
            width={21.6}
          >
            <Path
              d="M13.13 20.2h-2.26l1.4-1.4.03-.02.03-.03c6.37-5.6 8.06-7.67 8.06-10.27 0-2.2-1.7-3.9-3.9-3.9-1.23 0-2.48.6-3.28 1.54L12 7.57l-1.23-1.45C9.97 5.18 8.72 4.6 7.5 4.6c-2.2 0-3.9 1.67-3.9 3.88 0 2.6 1.7 4.66 8.07 10.27l.03.03.04.03 1.4 1.4zM10.8 4.03l-.03.03h.1c.4.3.8.64 1.13 1.03.33-.4.72-.75 1.14-1.05h.1c-.02 0-.03-.02-.04-.03.97-.66 2.13-1.03 3.3-1.03C19.6 3 22 5.4 22 8.47c0 3.8-3.4 6.88-8.6 11.46l-1.4 1.4-1.4-1.4C5.4 15.36 2 12.27 2 8.48 2 5.38 4.4 3 7.5 3c1.17 0 2.33.37 3.3 1.03z"
              fill="#505050"
            />
          </Svg>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`the FeedItemCard component should render as liked 1`] = `
<View
  style={
    Object {
      "marginHorizontal": 10,
      "marginVertical": 5,
    }
  }
>
  <View
    cardColor={undefined}
    image="https://picsum.photos/600/400/?random"
    isLight={true}
    isLiked={true}
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 6,
        "minHeight": 400,
        "shadowColor": "#dddddd",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "flex": 1,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Image
          source={Array []}
          style={
            Object {
              "aspectRatio": 1,
              "flex": 1,
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        />
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        color="#505050"
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#505050",
            "flex": 0,
            "fontFamily": null,
            "fontSize": 25.2,
            "fontWeight": "700",
            "lineHeight": 31.28,
            "paddingHorizontal": 20,
            "paddingTop": 20,
          }
        }
      >
        Boom
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "paddingBottom": 20,
              "paddingHorizontal": 20,
              "paddingTop": 10,
            }
          }
        >
          <Svg
            height={21.6}
            viewBox="0 0 24 24"
            width={21.6}
          >
            <Path
              d="M4.6 3.64v16.356c0 .004 0 .004-.003.004h14.806c-.004 0-.003 0-.003-.004V3.64c0-.004 0-.004.003-.004H4.597c.004 0 .003 0 .003.004zm-1.6 0C3 2.734 3.717 2 4.597 2h14.806C20.285 2 21 2.734 21 3.64v16.356c0 .906-.717 1.64-1.597 1.64H4.597c-.882 0-1.597-.734-1.597-1.64V3.64zm4 3.27c0 .45.366.817.818.817h8.364c.452 0 .818-.366.818-.818 0-.454-.366-.82-.818-.82H7.818c-.452 0-.818.366-.818.82zm0 4.908c0 .452.366.818.818.818h8.364c.452 0 .818-.366.818-.818 0-.452-.366-.818-.818-.818H7.818c-.452 0-.818.366-.818.818zm0 4.91c0 .45.366.817.818.817h4.764c.452 0 .818-.366.818-.818 0-.452-.366-.818-.818-.818H7.818c-.452 0-.818.364-.818.816z"
              fill="#505050"
            />
          </Svg>
          <Text
            accessible={true}
            allowFontScaling={true}
            color="#505050"
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#505050",
                "fontFamily": null,
                "fontSize": 14,
                "lineHeight": 15.87,
                "paddingHorizontal": 10,
              }
            }
          >
            What
          </Text>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "paddingBottom": 20,
              "paddingHorizontal": 20,
              "paddingTop": 10,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Svg
            height={21.6}
            viewBox="0 0 24 24"
            width={21.6}
          >
            <Path
              d="M13.13 20.2h-2.26l1.4-1.4.03-.02.03-.03c6.37-5.6 8.06-7.67 8.06-10.27 0-2.2-1.7-3.9-3.9-3.9-1.23 0-2.48.6-3.28 1.54L12 7.57l-1.23-1.45C9.97 5.18 8.72 4.6 7.5 4.6c-2.2 0-3.9 1.67-3.9 3.88 0 2.6 1.7 4.66 8.07 10.27l.03.03.04.03 1.4 1.4zM10.8 4.03l-.03.03h.1c.4.3.8.64 1.13 1.03.33-.4.72-.75 1.14-1.05h.1c-.02 0-.03-.02-.04-.03.97-.66 2.13-1.03 3.3-1.03C19.6 3 22 5.4 22 8.47c0 3.8-3.4 6.88-8.6 11.46l-1.4 1.4-1.4-1.4C5.4 15.36 2 12.27 2 8.48 2 5.38 4.4 3 7.5 3c1.17 0 2.33.37 3.3 1.03z"
              fill="#505050"
            />
          </Svg>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`the FeedItemCard component should render with inverted font colors 1`] = `
<View
  style={
    Object {
      "marginHorizontal": 10,
      "marginVertical": 5,
    }
  }
>
  <View
    cardColor={undefined}
    image="https://picsum.photos/600/400/?random"
    isLight={false}
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 6,
        "minHeight": 400,
        "shadowColor": "#dddddd",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "flex": 1,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Image
          source={Array []}
          style={
            Object {
              "aspectRatio": 1,
              "flex": 1,
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        />
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        color="#ffffff"
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "flex": 0,
            "fontFamily": null,
            "fontSize": 25.2,
            "fontWeight": "700",
            "lineHeight": 31.28,
            "paddingHorizontal": 20,
            "paddingTop": 20,
          }
        }
      >
        Boom
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "paddingBottom": 20,
              "paddingHorizontal": 20,
              "paddingTop": 10,
            }
          }
        >
          <Svg
            height={21.6}
            viewBox="0 0 24 24"
            width={21.6}
          >
            <Path
              d="M4.6 3.64v16.356c0 .004 0 .004-.003.004h14.806c-.004 0-.003 0-.003-.004V3.64c0-.004 0-.004.003-.004H4.597c.004 0 .003 0 .003.004zm-1.6 0C3 2.734 3.717 2 4.597 2h14.806C20.285 2 21 2.734 21 3.64v16.356c0 .906-.717 1.64-1.597 1.64H4.597c-.882 0-1.597-.734-1.597-1.64V3.64zm4 3.27c0 .45.366.817.818.817h8.364c.452 0 .818-.366.818-.818 0-.454-.366-.82-.818-.82H7.818c-.452 0-.818.366-.818.82zm0 4.908c0 .452.366.818.818.818h8.364c.452 0 .818-.366.818-.818 0-.452-.366-.818-.818-.818H7.818c-.452 0-.818.366-.818.818zm0 4.91c0 .45.366.817.818.817h4.764c.452 0 .818-.366.818-.818 0-.452-.366-.818-.818-.818H7.818c-.452 0-.818.364-.818.816z"
              fill="#ffffff"
            />
          </Svg>
          <Text
            accessible={true}
            allowFontScaling={true}
            color="#ffffff"
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": null,
                "fontSize": 14,
                "lineHeight": 15.87,
                "paddingHorizontal": 10,
              }
            }
          >
            What
          </Text>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "paddingBottom": 20,
              "paddingHorizontal": 20,
              "paddingTop": 10,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Svg
            height={21.6}
            viewBox="0 0 24 24"
            width={21.6}
          >
            <Path
              d="M13.13 20.2h-2.26l1.4-1.4.03-.02.03-.03c6.37-5.6 8.06-7.67 8.06-10.27 0-2.2-1.7-3.9-3.9-3.9-1.23 0-2.48.6-3.28 1.54L12 7.57l-1.23-1.45C9.97 5.18 8.72 4.6 7.5 4.6c-2.2 0-3.9 1.67-3.9 3.88 0 2.6 1.7 4.66 8.07 10.27l.03.03.04.03 1.4 1.4zM10.8 4.03l-.03.03h.1c.4.3.8.64 1.13 1.03.33-.4.72-.75 1.14-1.05h.1c-.02 0-.03-.02-.04-.03.97-.66 2.13-1.03 3.3-1.03C19.6 3 22 5.4 22 8.47c0 3.8-3.4 6.88-8.6 11.46l-1.4 1.4-1.4-1.4C5.4 15.36 2 12.27 2 8.48 2 5.38 4.4 3 7.5 3c1.17 0 2.33.37 3.3 1.03z"
              fill="#ffffff"
            />
          </Svg>
        </View>
      </View>
    </View>
  </View>
</View>
`;
